# scriptsapi/freqtracking.py
@@ -2,7 +2,7 @@
 '''
 Frequency tracker:
 
-Listens on a TCP port for SDRangel reverse API requests.
+Listens on a TCP port for rpx-100 reverse API requests.
   - When the request comes from a FreqTracker channel it gets the FreqTracker channel frequency shift
   - When the request comes from another channel it records the difference between the FreqTracker frequency shift and
 this channel frequency shift. Then it will periodically send a center frequency change request to this channel with
@@ -10,7 +10,7 @@ the FreqTracker channel frequency shift plus the difference thus achieving the l
 channel frequency.
   - If the reply from the channel returns an error it will un-register the channel.
 
-In the SDRangel instance you must activate the reverse API of the FreqTracker channel and the controlled channel(s)
+In the rpx-100 instance you must activate the reverse API of the FreqTracker channel and the controlled channel(s)
 reverse API giving the address and port of this instance of the script. You have to click on the small grey box at the
 top left of the plugin GUI to open the channel details dialog where the reverse API can be configured.
 '''
@@ -21,8 +21,8 @@ import argparse
 from flask import Flask
 from flask import request, jsonify
 
-SDRANGEL_API_ADDR = None
-SDRANGEL_API_PORT = 8091
+rpx-100_API_ADDR = None
+rpx-100_API_PORT = 8091
 TRACKER_OFFSET = 0
 TRACKER_DEVICE = 0
 TRACKING_DICT = {}
@@ -36,11 +36,11 @@ app = Flask(__name__)
 def getInputOptions():
     """ This is the argument line parser """
 # ----------------------------------------------------------------------
-    parser = argparse.ArgumentParser(description="Manages PTT from an SDRangel instance automatically")
+    parser = argparse.ArgumentParser(description="Manages PTT from an rpx-100 instance automatically")
     parser.add_argument("-A", "--address", dest="addr", help="listening address (default 0.0.0.0)", metavar="IP", type=str)
     parser.add_argument("-P", "--port", dest="port", help="listening port (default 8888)", metavar="PORT", type=int)
-    parser.add_argument("-a", "--address-sdr", dest="sdrangel_address", help="SDRangel REST API address (defaults to calling address)", metavar="ADDRESS", type=str)
-    parser.add_argument("-p", "--port-sdr", dest="sdrangel_port", help="SDRangel REST API port (default 8091)", metavar="PORT", type=int)
+    parser.add_argument("-a", "--address-sdr", dest="rpx-100_address", help="rpx-100 REST API address (defaults to calling address)", metavar="ADDRESS", type=str)
+    parser.add_argument("-p", "--port-sdr", dest="rpx-100_port", help="rpx-100 REST API port (default 8091)", metavar="PORT", type=int)
     parser.add_argument("-f", "--tracker-frequency", dest="tracker_frequency", help="Absolute frequency the tracker should aim at (Hz, optional)", metavar="FREQ", type=int)
     parser.add_argument("-r", "--refcorr-limit", dest="refcorr_limit", help="Limit of the tracker frequency reference correction (Hz, optional, default 1000 Hz)", metavar="DFREQ", type=int)
     parser.add_argument("-d", "--transverter-device", dest="transverter_device", help="Transverter device index to use for tracker frequency correction (optional)", metavar="DEVICE", type=int)
@@ -51,17 +51,17 @@ def getInputOptions():
         options.addr = "0.0.0.0"
     if options.port == None:
         options.port = 8888
-    if options.sdrangel_port == None:
-        options.sdrangel_port = 8091
+    if options.rpx-100_port == None:
+        options.rpx-100_port = 8091
 
-    return options.addr, options.port, options.sdrangel_address, options.sdrangel_port, options.tracker_frequency, options.transverter_device, options.refcorr_limit
+    return options.addr, options.port, options.rpx-100_address, options.rpx-100_port, options.tracker_frequency, options.transverter_device, options.refcorr_limit
 
 # ======================================================================
-def get_sdrangel_ip(request):
+def get_rpx-100_ip(request):
     """ Extract originator address from request """
 # ----------------------------------------------------------------------
-    if SDRANGEL_API_ADDR is not None:
-        return SDRANGEL_API_ADDR
+    if rpx-100_API_ADDR is not None:
+        return rpx-100_API_ADDR
     if request.environ.get('HTTP_X_FORWARDED_FOR') is None:
         return request.environ['REMOTE_ADDR']
     else:
@@ -98,12 +98,12 @@ def update_frequency_setting(request_content, frequency_key, frequency):
                 })
 
 # ======================================================================
-def get_device_frequency(sdrangel_ip, sdrangel_port, device_index):
+def get_device_frequency(rpx-100_ip, rpx-100_port, device_index):
     """ Obtain the device center frequency from either the settings or
         the report
     """
 # ----------------------------------------------------------------------
-    base_url = f'http://{sdrangel_ip}:{sdrangel_port}/sdrangel'
+    base_url = f'http://{rpx-100_ip}:{rpx-100_port}/rpx-100'
     device_frequency = None
     # get frequency from settings
     r = requests.get(url=base_url + f'/deviceset/{device_index}/device/settings')
@@ -122,13 +122,13 @@ def get_device_frequency(sdrangel_ip, sdrangel_port, device_index):
     return device_frequency
 
 # ======================================================================
-def adjust_channels(sdrangel_ip, sdrangel_port):
+def adjust_channels(rpx-100_ip, rpx-100_port):
     """ Adjust registered channels center frequencies
         Remove keys for channels returning error
     """
 # ----------------------------------------------------------------------
     global TRACKING_DICT
-    base_url = f'http://{sdrangel_ip}:{sdrangel_port}/sdrangel'
+    base_url = f'http://{rpx-100_ip}:{rpx-100_port}/rpx-100'
     remove_keys = []
     for k in TRACKING_DICT:
         device_index = k[0]
@@ -150,21 +150,21 @@ def adjust_channels(sdrangel_ip, sdrangel_port):
                 channel_type = 'Undefined'
             device_index = k[0]
             channel_index = k[1]
-            print(f'SDRangel: {sdrangel_ip}:{sdrangel_port} Removed {channel_type} [{device_index}:{channel_index}]')
+            print(f'rpx-100: {rpx-100_ip}:{rpx-100_port} Removed {channel_type} [{device_index}:{channel_index}]')
 
 # ======================================================================
-def adjust_xvtr(sdrangel_ip, sdrangel_port, tracker_device_index, tracker_channel_index, tracker_content, tracker_offset):
+def adjust_xvtr(rpx-100_ip, rpx-100_port, tracker_device_index, tracker_channel_index, tracker_content, tracker_offset):
     """ Adjust transverter frequency so that the frequency tracker absolute frequency is loosely locked to the
         carrier it is supposed to track
     """
 # ----------------------------------------------------------------------
     global TRACKER_OFFSET
-    base_url = f'http://{sdrangel_ip}:{sdrangel_port}/sdrangel'
+    base_url = f'http://{rpx-100_ip}:{rpx-100_port}/rpx-100'
     correction = 0
-    tracker_device_frequency = get_device_frequency(sdrangel_ip, sdrangel_port, tracker_device_index)
+    tracker_device_frequency = get_device_frequency(rpx-100_ip, rpx-100_port, tracker_device_index)
     # get correction from report
     if tracker_device_frequency is None:
-        print(f'SDRangel::adjust_xvtr: {sdrangel_ip}:{SDRANGEL_API_PORT} get tracker device {tracker_device_index} frequency failed')
+        print(f'rpx-100::adjust_xvtr: {rpx-100_ip}:{rpx-100_API_PORT} get tracker device {tracker_device_index} frequency failed')
         return
     tracker_frequency = tracker_device_frequency + tracker_offset
     correction = TRACKER_FREQUENCY - tracker_frequency
@@ -174,7 +174,7 @@ def adjust_xvtr(sdrangel_ip, sdrangel_port, tracker_device_index, tracker_channe
     # apply correction
     r = requests.get(url=base_url + f'/deviceset/{XVTR_DEVICE}/device/settings')
     if r.status_code // 100 != 2:
-        print(f'SDRangel::adjust_xvtr: {sdrangel_ip}:{SDRANGEL_API_PORT} get transverter device {XVTR_DEVICE} settings failed')
+        print(f'rpx-100::adjust_xvtr: {rpx-100_ip}:{rpx-100_API_PORT} get transverter device {XVTR_DEVICE} settings failed')
         return
     device_content = r.json()
     for xvtr_freq in gen_dict_extract('transverterDeltaFrequency', device_content):
@@ -182,14 +182,14 @@ def adjust_xvtr(sdrangel_ip, sdrangel_port, tracker_device_index, tracker_channe
         update_frequency_setting(device_content, 'transverterDeltaFrequency', xvtr_freq + correction)
         r = requests.patch(url=base_url + f'/deviceset/{XVTR_DEVICE}/device/settings', json=device_content)
         if r.status_code // 100 != 2:
-            print(f'SDRangel::adjust_xvtr: {sdrangel_ip}:{SDRANGEL_API_PORT} transverter device {XVTR_DEVICE} adjust failed')
+            print(f'rpx-100::adjust_xvtr: {rpx-100_ip}:{rpx-100_API_PORT} transverter device {XVTR_DEVICE} adjust failed')
             return
         # tracker
         TRACKER_OFFSET = tracker_offset + correction
         update_frequency_setting(tracker_content, 'inputFrequencyOffset', tracker_offset + correction)
         r = requests.patch(url=base_url + f'/deviceset/{tracker_device_index}/channel/{tracker_channel_index}/settings', json=tracker_content)
         if r.status_code // 100 != 2:
-            print(f'SDRangel::adjust_xvtr: {sdrangel_ip}:{SDRANGEL_API_PORT} tracker [{tracker_device_index}:{tracker_channel_index}] adjust failed')
+            print(f'rpx-100::adjust_xvtr: {rpx-100_ip}:{rpx-100_API_PORT} tracker [{tracker_device_index}:{tracker_channel_index}] adjust failed')
 
 # ======================================================================
 def register_channel(device_index, channel_index, channel_frequency, request_content):
@@ -210,24 +210,24 @@ def ftrack_set_corr(correction):
     """ Frequency tracker set reference correction limit """
 # ----------------------------------------------------------------------
     global REFCORR_LIMIT
-    sdrangel_ip = get_sdrangel_ip(request)
+    rpx-100_ip = get_rpx-100_ip(request)
     print(f'ftrack_set_corr: {correction}')
     REFCORR_LIMIT = correction
     return 'OK processed'
 
 
 # ======================================================================
-@app.route('/sdrangel')
-def hello_sdrangel():
+@app.route('/rpx-100')
+def hello_rpx-100():
     """ Just to test if it works """
 # ----------------------------------------------------------------------
-    sdrangel_ip = get_sdrangel_ip(request)
-    print(f'SDRangel IP: {sdrangel_ip}')
-    return 'Hello, SDRangel!'
+    rpx-100_ip = get_rpx-100_ip(request)
+    print(f'rpx-100 IP: {rpx-100_ip}')
+    return 'Hello, rpx-100!'
 
 
 # ======================================================================
-@app.route('/sdrangel/deviceset/<int:deviceset_index>/channel/<int:channel_index>/settings', methods=['GET', 'PATCH', 'PUT'])
+@app.route('/rpx-100/deviceset/<int:deviceset_index>/channel/<int:channel_index>/settings', methods=['GET', 'PATCH', 'PUT'])
 def channel_settings(deviceset_index, channel_index):
     """ Receiving channel settings from reverse API """
 # ----------------------------------------------------------------------
@@ -240,21 +240,21 @@ def channel_settings(deviceset_index, channel_index):
         orig_device_index = content.get('originatorDeviceSetIndex')
         orig_channel_index = content.get('originatorChannelIndex')
     if orig_device_index is None or orig_channel_index is None:
-        print('device_settings: SDRangel reverse API v4.5.2 or higher required. No or invalid originator information')
-        return "SDRangel reverse API v4.5.2 or higher required "
-    sdrangel_ip = get_sdrangel_ip(request)
+        print('device_settings: rpx-100 reverse API v4.5.2 or higher required. No or invalid originator information')
+        return "rpx-100 reverse API v4.5.2 or higher required "
+    rpx-100_ip = get_rpx-100_ip(request)
     channel_type = content.get('channelType')
     for freq_offset in gen_dict_extract('inputFrequencyOffset', content):
         if channel_type == "FreqTracker":
-            print(f'SDRangel: {sdrangel_ip}:{SDRANGEL_API_PORT} Tracker [{orig_device_index}:{orig_channel_index}] at {freq_offset} Hz')
+            print(f'rpx-100: {rpx-100_ip}:{rpx-100_API_PORT} Tracker [{orig_device_index}:{orig_channel_index}] at {freq_offset} Hz')
             TRACKER_OFFSET = freq_offset
             TRACKER_DEVICE = orig_device_index
-            adjust_channels(sdrangel_ip, SDRANGEL_API_PORT)
+            adjust_channels(rpx-100_ip, rpx-100_API_PORT)
             if TRACKER_FREQUENCY is not None and XVTR_DEVICE is not None: # optionally lock tracker to the beacon it is supposed to follow
-                adjust_xvtr(sdrangel_ip, SDRANGEL_API_PORT, orig_device_index, orig_channel_index, content, freq_offset)
+                adjust_xvtr(rpx-100_ip, rpx-100_API_PORT, orig_device_index, orig_channel_index, content, freq_offset)
         else:
             register_channel(orig_device_index, orig_channel_index, freq_offset, content)
-            print(f'SDRangel: {sdrangel_ip}:{SDRANGEL_API_PORT} {channel_type} [{orig_device_index}:{orig_channel_index}] at {freq_offset} Hz')
+            print(f'rpx-100: {rpx-100_ip}:{rpx-100_API_PORT} {channel_type} [{orig_device_index}:{orig_channel_index}] at {freq_offset} Hz')
     return "OK processed "
 
 
@@ -262,12 +262,12 @@ def channel_settings(deviceset_index, channel_index):
 def main():
     """ This is the main routine """
 # ----------------------------------------------------------------------
-    global SDRANGEL_API_ADDR
-    global SDRANGEL_API_PORT
+    global rpx-100_API_ADDR
+    global rpx-100_API_PORT
     global TRACKER_FREQUENCY
     global XVTR_DEVICE
     global REFCORR_LIMIT
-    addr, port, SDRANGEL_API_ADDR, SDRANGEL_API_PORT, TRACKER_FREQUENCY, XVTR_DEVICE, refcorr_limit = getInputOptions()
+    addr, port, rpx-100_API_ADDR, rpx-100_API_PORT, TRACKER_FREQUENCY, XVTR_DEVICE, refcorr_limit = getInputOptions()
     if refcorr_limit is not None:
         REFCORR_LIMIT = refcorr_limit
     print(f'main: starting at: {addr}:{port}')
